# learn-agent

./: .env  .gitignore  dump.rdb  pyproject.toml
app/agent/: e5a36d27-5826-4c17-9f8e-f90ac245f27c.json  multi_chat.py
app/agent/prompts/: multi_chat_prompts.py
app/bailian/: __init__.py  bailian.py  bailian_agent.py  bailian_output_parser.py  bailian_prompt.py  bailian_python_repl.py  bailian_qwq.py  bailian_tools.py  common.py
app/code_agent/agent/: agent_chat.py  code_agent.py  model_chat.py
app/code_agent/mcp/: README.md  shell_tools.py  terminal_tools.py
app/code_agent/model/: qwen.py
app/code_agent/rag/: README.md  rag.py  rag_test.txt  terminal.txt
app/code_agent/tools/: file_saver.py  file_tools.py  rag_self_tools.py  rag_tools.py  shell_tools.py  terminal_tools.py
app/code_agent/utils/: mcp.py
app/mcp/amap/: amap_mcp_client.py
app/mcp/sse/: mcp_sse_client.py  mcp_sse_server.py
app/mcp/stdio/: mcp_github_client.py  mcp_playwright_client.py  mcp_stdio_client.py  mcp_stdio_server.py
app/ollama/: __init__.py
