[project]
name = "ai-agent-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain==0.3.25",
    "langchain-experimental==0.3.4",
    "langchain-ollama==0.3.2",
    "langchain-openai==0.3.16",
    "openai==1.78.0",
    "pydantic==2.11.4",
]
